@@ -4,10 +4,7 @@
 pipeline{
 
     agent any
-    environment {
-    MAVEN_OPTS = '--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
-}
-
+    
     
     parameters{
 
@@ -32,7 +29,6 @@ pipeline{
                 when{expression { params.action == 'create' }}
                 steps{
                    script{
-                    withMaven(maven: 'Maven 3.10.1', jdk: 'Java 17')
                        mvnTest()
                }       
             }
@@ -40,7 +36,6 @@ pipeline{
             stage('mvn integration test'){
                 when{expression { params.action == 'create' }}
                 steps{
-                    withMaven(maven: 'Maven 3.10.1', jdk: 'Java 17')
                     script{
                         mvnIntegrationTest()
                     }
@@ -51,7 +46,6 @@ pipeline{
                 when{expression { params.action == 'create' }}
                 steps{
                     script{
-                        withMaven(maven: 'Maven 3.10.1', jdk: 'Java 17')
                         def ZSonarQubecredentialId = 'sonarqube-server'
                         statiCodeAnalysis(ZSonarQubecredentialId)
 
